# valter

./: BUILD_ON_VALTER  README  TODO  UTILS  VIRTUAL-SERVERS
cybernetics/: Commands.txt  InitialTest.mm
cybernetics/AI/: .gitignore  README
cybernetics/Valter/: .gitignore  InitialTest.mm  README  Valter.dia
documents/GB-0814/: sow.txt
documents/X/: remote_start
documents/autostart/: README
electronics/circuits/: .gitignore  IRF4905_switch.LYT  IRF4905_switch.dsn  README  VALTER-PCB.IDX  VALTER-PCB.LIB  VALTER.IDX  VALTER.LIB  acs756_cur_sensor_circuit.DSN  arm_control_p1.LYT  arm_control_p1.dsn  arm_interface.LYT  arm_interface.dsn  arm_servos_board.DSN  arm_servos_board.LYT  body_control_p1.LYT  body_control_p1.dsn  body_control_p2.LYT  body_control_p2.dsn  computer-case-electric-system-post-modified.DSN  computer-case-electric-system.DSN  computer-case-electric-system.LYT  energy_system.DSN  irl3705n_switch.DSN  irl3705n_switch.LYT  mouth.DSN  mouth.LYT  mouth_inv.DSN  platform_control_p1.DSN  platform_control_p1.LYT  platform_control_p2.dsn  platform_location_p1.DSN  platform_location_p1.LYT  platform_manipulator.DSN  platform_manipulator_and_ir_bumper.DSN  platform_manipulator_and_ir_bumper.LYT  sharp_sensors_switcher.DSN  sharp_sensors_switcher.LYT  small_accumulators_switch_and_cur_sensor.DSN  small_accumulators_switch_and_cur_sensor.LYT  (+1 more)
electronics/documents/: README
electronics/flowcharts/: .gitignore  Manipulator.dia  Platform.bottom.cap.dia  Platform.cap.dia  Platform.dia  Platform.p1.dia  Platform.p2.dia  README
electronics/tables/: .gitignore  EnergySystem.ods  Manipulator.ods  README
mechanics/: AC-DC-12-fixture.SLDPRT  AVR.programmer.SLDPRT  DC-DC-12-24-fixture-p1.SLDPRT  DC-DC-12-24-fixture-p2.SLDPRT  DC-DC-12-24-fixture.SLDPRT  DC-DC-12-24.SLDPRT  Fan - housing.SLDPRT  Fan - propeller.SLDPRT  HS-311 Hitec Standard Servo and Horn.SLDASM  HS-311 Hitec Standard Servo.SLDPRT  HS-311-p2.SLDPRT  PALM.LIFT.THREAD.FIXTURE.P3.SLDPRT  PC Fan.SLDASM  S03T STD GWS Servo.SLDPRT  SD-25A-5.SLDPRT  SD-50A-5.SLDPRT  SY42STH47.SLDPRT  SY57STH56-2804A.SLDPRT  SY85STH65-2808A.SLDPRT  Sharp IR Body.SLDPRT  Sharp IR GP2D120.SLDASM  Sharp IR JST.SLDPRT  accumulator.5Ah.SLDPRT  accumulator.charger.sm1236.SLDPRT  accumulator.loft.SLDPRT  accumulator.loft.pillar.SLDPRT  accumulator.loft.rubber.SLDPRT  accumulator1.SLDPRT  acdc.12v.power.supply.SLDPRT  acdc.220V.filter.SLDPRT  actuator.100.fixture.SLDPRT  ad4067.multilexer.SLDPRT  ant.SLDPRT  arm.actuator.SLDASM  arm.actuator.p1.SLDPRT  arm.actuator.p2.SLDPRT  arm.actuator100mm..p1.SLDPRT  arm.actuator100mm.p2.SLDPRT  arm.cap.SLDPRT  arm.drive.motor.SLDPRT  (+553 more)
mechanics/drawings/: back.camera.housing - drawing.SLDDRW  encoder.DWG  encoder.SLDDRW  encoder.cdr  Резервная_копия_encoder.cdr
pr/: Valter_greeting.txt  ros.org.testimonials
pr/images/: valter-640.xcf  valter.xcf
software/: MISC_INFO  README
software/ROS/tests/: CMakeLists.txt  move_base_simple.cpp
software/charger/: chargercmdserver.py  servo.py
software/computer/: .gitignore  README
software/computer/ros/training/ros_packages/beginner_tutorials/: CMakeLists.txt  package.xml
software/computer/ros/training/ros_packages/beginner_tutorials/src/: joy_listener.cpp  listener.cpp  talker.cpp  turtle_frame.h
software/documents/: 55-at91sam7s.rules  add_useracc_to_dialout.txt
software/exp/: angular_vel_timings_360deg_35pwm.ods  (+1 more)
software/ros/workspaces/master/src/valter/: CMakeLists.txt
software/ros/workspaces/master/src/valter/launch/: Valter.launch  display.launch  gazebo.launch  irscan.launch  laser-scan-from-pcl-throttled.launch  laser-scan-from-pcl.launch  valter-tf.launch
software/ros/workspaces/master/src/valter/meshes/: Base.STL  GripperL.STL  LArm.STL  LTorso.STL  Neck.STL  RShoulder.STL  support_wheels_centers.STL
software/ros/workspaces/master/src/valter/robots/: valter.URDF
software/ros/workspaces/master/src/valter/src/: face_tracker.cpp  face_tracker_README  move_base_simple.cpp  moveit_frame_tf.cpp  point_cloud.cpp  tcp_client.h  valter_joy_teleop.cpp  valter_joy_teleop_cmd_vel_pub.cpp
software/ros/workspaces/master/src/valter/src/misc/: torso_server.cpp
software/ros/workspaces/master/src/valter/src/obsolete/: set_goal.cpp  tcp_client.cpp  test_cmd_vel_subscriber.cpp
software/ros/workspaces/master/src/valter_movit/: CMakeLists.txt  EXPERIMENTS
software/ros/workspaces/master/src/valter_movit/config/: controllers.yaml  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  valter.srdf  valter_initial.srdf  ~controllers.yaml
software/ros/workspaces/master/src/valter_movit/config-exp/: fake_controllers.yaml  full_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  valter.srdf
software/ros/workspaces/master/src/valter_movit/config-exp/planner/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params_3d.yaml
software/ros/workspaces/master/src/valter_movit/config/planner/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  local_costmap_params_3d.yaml  move_base_params.yaml
software/ros/workspaces/master/src/valter_movit/launch/: default_warehouse_db.launch  demo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  planning_pipeline.launch.xml  run_benchmark_ompl.launch  setup_assistant.launch  trajectory_execution.launch.xml  valter.launch  valter_moveit_controller_manager.launch.xml
software/ros/workspaces/master/src/valter_movit/src/: left_arm_joint_trajectory_action_server.cpp  right_arm_joint_trajectory_action_server.cpp
software/ros/workspaces/valter1/src/valter/: CMakeLists.txt  package.xml
software/ros/workspaces/valter1/src/valter/src/: BLUETOOTH  bluetooth_server.cpp  cmd_vel_subscriber.cpp  odometry.cpp  valter_joint_states_publisher.cpp
software/ros/workspaces/valter2/src/valter/: CMakeLists.txt  package.xml
software/ros/workspaces/valter2/src/valter/src/: face_tracker.cpp
(+2052 files in other folders)
